--- a/some exemples/page.html
+++ b/some exemples/page.html
@@ -28,7 +28,10 @@
             <section>
                 <h2>Music Videos</h2>
                 <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JsOOis4bBFg?si=rZtU0vKn_HMmtxFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TQTlCHxyuu8?si=LO2UHl4ViNdfDp71" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/OvioeS1ZZ7o?si=CXHJzLwKl-VcMcPv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JsOOis4bBFg?si=rZtU0vKn_HMmtxFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+                </div>
             </section>
         </main>
     </body>
