--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stayville</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;600&family=Inria+Serif:ital,wght@0,400;1,300&family=Irish+Grover&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
@@ -18,10 +22,15 @@
                 <li><a href="#">log in</a></li>
             </ul>
         </nav>
-        
     </header>
     <main>
-        <img src="img/image.jpg" alt="" class="black">
+        <div class="container">
+        <img src="img/image.jpg" alt="">
+        <div class="text">
+            <h2>Stayville</h2>
+            <p>As long as I stay with</p>
+            <p>my heart</p> 
+    </div>
     </main>
 </body>
 </html>
