--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
+    
     <header>
         <h1>Stayville</h1>
         <nav>
@@ -24,13 +25,34 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-        <img src="img/image.jpg" alt="">
-        <div class="text">
+        <div class="circle"> </div>
+        <div class="circle2"></div>
+        <div class="intro">
+            <img src="img/image.jpg" alt="">
+            <div class="text">
             <h2>Stayville</h2>
-            <p>As long as I stay with</p>
-            <p>my heart</p> 
+            <p>As long as I stay with</p> 
+            <p> my heart</p> 
+            <button> music </button>
+            </div>
+            </div> 
+     <div class="who">
+        <div class="container">
+        <h2>You make Stray kids Stay</h2> 
+        <h1>STRAY KIDS EVERYWHERE <br> ALL AROUND THE WORLD</h1>
+        <div class="text">
+            <div class="welcome">Welcome to the Stayville website. This is a virtual journey into the world of music, which begins with Stray Kids.<button>about group</button></div>
+            <div class="description">Stray Kids is not just music, it's movement, philosophy and art. They gave us several hundred songs, but also caused endless emotions and hopes. They are a bridge between music and life. Join our journey and I assure you it will leave a mark in your hearts and give you faith in your abilities.</div>
+        </div>
+       
+       </div>
     </div>
+    <div class="imagine">
+        <img src="img/1.jpg" alt="">
+        <img src="img/2.jpg" alt="">
+        <img src="img/3.jpg" alt="">
+        <img src="img/4.jpg" alt="">
+     </div>
     </main>
 </body>
 </html>
