--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -32,7 +32,8 @@
             <h2>Stayville</h2>
             <p>As long as I stay with</p> 
             <p> my heart</p> 
-            <button> music </button>
+            <a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">
+            <button> music </button></a>
             </div>
         </section> 
         <section class="who">
@@ -103,7 +104,15 @@
             </a>
             </div>                
             </div>
-            
+        </section>
+        <section class="award">
+            <h1>Awards</h1>
+            <div class="text">
+                <h3>Awards and <br> nominations <br>received by Stray <br> Kids</h3>
+                <p>South Korean boy band Stray Kids' <br> list of awards and nominations <br> includes 62 awards and 127 <br> nominations, as well as 25 music <br> show wins.</p>
+                
+            </div>
+            <button class="but">read more</button>
         </section>
     </main>
 </body>
