--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -114,6 +114,65 @@
             </div>
             <button class="but">read more</button>
         </section>
+        <section class="news">
+            <h1>What's new?</h1>
+            <div class="all">
+                <input checked type="radio" name="respond" id="desktop">
+                    <article id="slider">
+                            <input checked type="radio" name="slider" id="switch1">
+                            <input type="radio" name="slider" id="switch2">
+                            <input type="radio" name="slider" id="switch3">
+                            <input type="radio" name="slider" id="switch4">
+                            <input type="radio" name="slider" id="switch5">
+                        <div id="slides">
+                            <div id="overflow">
+                                <div class="image">
+                                    <article><img src="img/image.jpg">
+                                    <div class="text1">
+
+                                    </div>
+                                    </article>
+                                    <article><img src="img/image.jpg">
+                                    <div class="text2">
+
+                                    </div>
+                                    </article>
+                                    <article><img src="img/image.jpg">
+                                    <div class="text3">
+
+                                    </div>
+                                    </article>
+                                    <article><img src="img/image.jpg">
+                                    <div class="text4">
+
+                                    </div>
+                                    </article>
+                                    <article><img src="img/image.jpg">
+                                    <div class="text5">
+                                        
+                                    </div>
+                                    </article>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="controls">
+                            <label for="switch1"></label>
+                            <label for="switch2"></label>
+                            <label for="switch3"></label>
+                            <label for="switch4"></label>
+                            <label for="switch5"></label>
+                        </div>
+                        <div id="active">
+                            <label for="switch1"></label>
+                            <label for="switch2"></label>
+                            <label for="switch3"></label>
+                            <label for="switch4"></label>
+                            <label for="switch5"></label>
+                        </div>
+                    </article>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
