news not finished

--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -56,6 +56,7 @@
             <div class="popular">
                 <h1>Popular <br> music</h1> 
                 <hr>
+                <a href="index.html"></a>
                 <button>discography</button>
             </div>
         </section>
@@ -114,7 +115,7 @@
             </div>
             <button class="but">read more</button>
         </section>
-        <section class="news">
+        <section  class="news">
             <h1>What's new?</h1>
             <div class="all">
                 <input checked type="radio" name="respond" id="desktop">
@@ -149,7 +150,7 @@
                                     </article>
                                     <article><img src="img/image.jpg">
                                     <div class="text5">
-                                        
+
                                     </div>
                                     </article>
                                 </div>
