--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -172,8 +172,19 @@
                         </div>
                     </article>
             </div>
-
         </section>
     </main>
+    <footer>
+        <div>
+        <h2>Stayville</h2>
+        <h5>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        </div>
+        <div class="social">
+            <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
+            <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
+            <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
+        </div>
+        
+    </footer>
 </body>
 </html>
