--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stayville</title>
+    <link rel="icon" type="image/png" href="img/music.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;600&family=Inria+Serif:ital,wght@0,400;1,300&family=Irish+Grover&display=swap" rel="stylesheet">
