--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -176,16 +176,22 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="mus">
+        <img src="img/music.png" alt="">
+        <div class="text">
         <h2>Stayville</h2>
-        <h5>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        <p>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</p>
+        </div>
         </div>
         <div class="social">
             <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
             <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
+            <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><img src="img/facebook.png" alt=""></a>
+            <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
             <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
         </div>
         
     </footer>
+    
 </body>
 </html>
