--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -54,24 +54,12 @@
             <img src="img/4.jpg" alt="">
         </section>
         <section class="video">
-        <div class="music">
             <div class="popular">
                 <h1>Popular <br> music</h1> 
+             <hr>
+                <div><button>discography</button></div>
             </div>
-                <div class="hrr"></div>
-                <div class="but"><button>discography</button></div>
             <div class="img1">
-                <img src="img/22.jpg" alt="">
-                <div class="text">
-                  <h1>God's menu <br><p>429,7 mln views</p> </h1>
-                  <a href="https://youtu.be/TQTlCHxyuu8?si=NdimAWbYTSoOBTk4" target="_blank">                   
-                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-                    <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"></path>
-                    </svg> 
-                </a>
-                </div>                
-            </div>
-            <div class="img2">
                 <img src="img/21.jpg" alt="">
                 <div class="text">  
                   <h1>Thunderous <br><p>331,7 mln views</p></h1>
@@ -82,19 +70,18 @@
                 </a>
                 </div>
             </div>
-            <div class="item"></div>
-            <div class="img3">
-            <img src="img/24.jpg" alt="">
-            <div class="text">
-               <h1>Maniac <br><p>214 mln views</p></h1>
-               <a href="https://youtu.be/OvioeS1ZZ7o?si=_A3_sF13IZT7wOdE" target="_blank">
-               <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-                <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"></path>
-                </svg>
-            </a>
-            </div>                
+            <div class="img2">
+                <img src="img/22.jpg" alt="">
+                <div class="text">
+                  <h1>God's menu <br><p>429,7 mln views</p> </h1>
+                  <a href="https://youtu.be/TQTlCHxyuu8?si=NdimAWbYTSoOBTk4" target="_blank">                   
+                  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                    <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"></path>
+                    </svg> 
+                </a>
+                </div>                
             </div>
-            <div class="img4">
+             <div class="img3">
              <img src="img/23.jpg" alt="">
              <div class="text">
                 <h1>S-class <br><p>143,5 mln views</p></h1>
@@ -105,7 +92,17 @@
                 </a>
              </div>                
              </div>
-        </div>
+            <div class="img4">
+            <img src="img/24.jpg" alt="">
+            <div class="text">
+               <h1>Maniac <br><p>214 mln views</p></h1>
+               <a href="https://youtu.be/OvioeS1ZZ7o?si=_A3_sF13IZT7wOdE" target="_blank">
+               <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"></path>
+                </svg>
+            </a>
+            </div>                
+            </div>
         </section>
         <section class="award">
             <h1>Awards</h1>
