--- a/some exemples/index.html
+++ b/some exemples/index.html
@@ -63,7 +63,7 @@
         <div class="grid-item item3">3</div>
         <div class="grid-item item4">4</div>
         <div class="grid-item item5">5</div>
-        <div class="grid-item item6">6</div>
+        <div class="grid-item item6"> </div>
         <div class="grid-item item7">7</div>
         <div class="grid-item item8">8</div>
     </div>
