--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="#">home</a></li>
-                <li><a href="#">group</a></li>
+                <li><a href="group.html">group</a></li>
                 <li><a href="#">discography</a></li>
                 <li><a href="#">news</a></li>
                 <li><a href="#">log in</a></li>
@@ -187,8 +187,6 @@
             <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
             <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
         </div>
-        
     </footer>
-    
 </body>
 </html>
