--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -115,61 +115,50 @@
         </section>
         <section  class="news">
             <h1>What's new?</h1>
-            <div class="all">
-                <input checked type="radio" name="respond" id="desktop">
-                    <article id="slider">
-                            <input checked type="radio" name="slider" id="switch1">
-                            <input type="radio" name="slider" id="switch2">
-                            <input type="radio" name="slider" id="switch3">
-                            <input type="radio" name="slider" id="switch4">
-                            <input type="radio" name="slider" id="switch5">
-                        <div id="slides">
-                            <div id="overflow">
-                                <div class="image">
-                                    <article><img src="img/image.jpg">
-                                    <div class="text1">
-
-                                    </div>
-                                    </article>
-                                    <article><img src="img/image.jpg">
-                                    <div class="text2">
-
-                                    </div>
-                                    </article>
-                                    <article><img src="img/image.jpg">
-                                    <div class="text3">
-
-                                    </div>
-                                    </article>
-                                    <article><img src="img/image.jpg">
-                                    <div class="text4">
-
-                                    </div>
-                                    </article>
-                                    <article><img src="img/image.jpg">
-                                    <div class="text5">
-
-                                    </div>
-                                    </article>
-                                </div>
-                            </div>
+            <section class="grid">
+                <article class="grid-item">
+                    <div class="image">
+                        <img src="img/group.jfif" />
+                    </div>
+                    <div class="info">
+                        <h2>樂-STAR</h2>
+                        <div class="info-text">
+                            <p>Rock-Star (stylized as 樂-STAR) is the eighth Korean-language album (thirteenth overall) by South Korean boy band Stray Kids, released on November 10, 2023</p>
                         </div>
-                        <div id="controls">
-                            <label for="switch1"></label>
-                            <label for="switch2"></label>
-                            <label for="switch3"></label>
-                            <label for="switch4"></label>
-                            <label for="switch5"></label>
+                        <div class="button-wrap">
+                            <a class="atuin-btn" href="#link">read more</a>
                         </div>
-                        <div id="active">
-                            <label for="switch1"></label>
-                            <label for="switch2"></label>
-                            <label for="switch3"></label>
-                            <label for="switch4"></label>
-                            <label for="switch5"></label>
+                    </div>
+                </article>
+                <article class="grid-item">
+                    <div class="image">
+                        <img src="img/musicore.jpg" />
+                    </div>
+                    <div class="info">
+                        <h2>Long-awaited victory</h2>
+                        <div class="info-text">
+                            <p>Stray Kids won first place on Music Core for the first time after six years into their career!</p>
                         </div>
-                    </article>
-            </div>
+                        <div class="button-wrap">
+                            <a class="atuin-btn" href="#link">read more</a>
+                        </div>
+                    </div>
+                </article>                
+                <article class="grid-item">
+                    <div class="image">
+                        <img src="img/megaverse.jpg" />
+                    </div>
+                    <div class="info">
+                        <h2>MEGAVERSE</h2>
+                        <div class="info-text">
+                            <p>Stray Kids(스트레이 키즈) "MEGAVERSE" Video released on November 19, 2023</p>
+                        </div>
+                        <div class="button-wrap">
+                            <a class="atuin-btn" href="#link">read more</a>
+                        </div>
+                    </div>
+                </article>    
+            </section>
         </section>
     </main>
     <footer>
