--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -24,25 +24,121 @@
         </nav>
     </header>
     <section class="stay"> 
-         <div><h1>Stray kids</h1></div>
+         <img src="img/Stray-Kids-Logo.png" alt="">
+         <div class="circle3"></div>
     </section> 
     <div class="tt"></div>
-    
+    <section class="straykids">
+        <div class="stray">
+        <div>
+        <img src="img/stray.png" alt="">
+        </div>
+            <div class="text">
+                <h1>Stray kids</h1>
+                <h2><strong> Stray Kids (스트레이 키즈)</strong> is a South Korean boy group under JYP Entertainment. The group consists of 8 members:</h2>
+            <div class="col">
+                <div class="col1">
+                    <h3>Bang Chan</h3>
+                    <h3>Lee Know</h3>
+                    <h3>Changbin</h3>
+                    <h3>Hyunjin</h3>
+                </div>
+                <div class="col2">
+                    <h3>Han</h3>
+                    <h3>Felix</h3>
+                    <h3>Seungmin</h3>
+                    <h3>I.N</h3>
+                </div>
+            </div>
+            <div class="slog">
+                <h5>Main slogan</h5>
+                <h3>Stray Kids Everywhere All Around The World</h3>
+                <h3>You make Stray Kids Stay</h3>
+            </div>
+            </div>
+        </div> 
+        <div class="inform">
+            <div class="text">
+                <div class="col">
+                    <div class="col1">
+                      <h3>Units</h3>  
+                      <h3>Debut</h3>
+                       <h3>Japanese Debut </h3> 
+                        <h3>Fandom Name </h3>
+                        <h3>Lightstick </h3> 
+                    </div> 
+                    <div class="col2">
+                       <h4>3racha, Danceracha, Vocalracha </h4> 
+                       <h4>25/03/2018 </h4> 
+                       <h4>18/03/2020 </h4> 
+                       <h4>Stay (revealed 01/08/2018) </h4> 
+                       <h4>Nachimbong </h4>   
+                    </div>
+                </div>
+            </div>
+            <div class="social">
+                <h1> Official Accounts </h1>
+                <div class="soc"> 
+                <a href="https://www.instagram.com/realstraykids/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 30 30">
+                    <path fill="#8d8dd8" d="M22.5,1.5h-15c-3.3,0-6,2.7-6,6v15c0,3.3,2.7,6,6,6h15c3.3,0,6-2.7,6-6v-15 C28.5,4.2,25.8,1.5,22.5,1.5z"></path><path fill="#8585cc" d="M27.9,5c-0.9-2.1-3-3.5-5.4-3.5h-4.1C21.8,2.1,25,3.3,27.9,5z"></path><path fill="#bd82f4" d="M1.5,7.5v15c0,3.3,2.7,6,6,6h15c3.3,0,6-2.7,6-6V8.9C24.1,5.8,18.8,4,13,4C8.8,4,4.8,5,1.3,6.7 C1.4,6.9,1.5,7.2,1.5,7.5z"></path><path fill="#ed73f4" d="M1.5,22.5c0,3.3,2.7,6,6,6h15c3.3,0,6-2.7,6-6v-9.8C24.3,9.1,18.9,7,13,7C8.8,7,4.9,8.1,1.5,9.9V22.5 z"></path><path fill="#f97dcd" d="M1.5,22.5c0,3.3,2.7,6,6,6h15c3.3,0,6-2.7,6-6v-5.6C24.7,12.7,19.1,10,13,10c-4.2,0-8.2,1.3-11.5,3.4 V22.5z"></path><path fill="#fc9c95" d="M1.5,22.5c0,3.3,2.7,6,6,6h15c3.3,0,6-2.7,6-6v-0.6C25.4,16.6,19.6,13,13,13 c-4.4,0-8.4,1.6-11.5,4.2V22.5z"></path><path fill="#ffac99" d="M1.5,22.5c0,3.3,2.7,6,6,6h15c1.9,0,3.6-0.9,4.7-2.3C25.2,20.3,19.6,16,13,16 c-4.6,0-8.7,2.1-11.5,5.4V22.5z"></path><path fill="#ffc49c" d="M7.5,28.5h15c0.8,0,1.5-0.1,2.1-0.4c-1.3-5.2-6-9.1-11.6-9.1c-4.7,0-8.7,2.7-10.7,6.5 C3.4,27.3,5.3,28.5,7.5,28.5z"></path><path fill="#ffde8d" d="M7.5,28.5h14.1C20.6,24.7,17.1,22,13,22c-3.8,0-7.1,2.4-8.4,5.8C5.5,28.2,6.5,28.5,7.5,28.5z"></path><path fill="#fff69f" d="M18.4,28.5c-0.9-2.1-3-3.5-5.4-3.5s-4.5,1.4-5.4,3.5H18.4z"></path><path fill="#8b75a1" d="M23,2c2.8,0,5,2.2,5,5v16c0,2.8-2.2,5-5,5H7c-2.8,0-5-2.2-5-5V7c0-2.8,2.2-5,5-5H23 M23,1H7 C3.7,1,1,3.7,1,7v16c0,3.3,2.7,6,6,6h16c3.3,0,6-2.7,6-6V7C29,3.7,26.3,1,23,1L23,1z"></path><path fill="#fff" d="M19,25h-8c-3.3,0-6-2.7-6-6v-8c0-3.3,2.7-6,6-6h8c3.3,0,6,2.7,6,6v8C25,22.3,22.3,25,19,25z M11,7 c-2.2,0-4,1.8-4,4v8c0,2.2,1.8,4,4,4h8c2.2,0,4-1.8,4-4v-8c0-2.2-1.8-4-4-4H11z"></path><path fill="#fff" d="M15 20c-2.8 0-5-2.2-5-5s2.2-5 5-5 5 2.2 5 5S17.8 20 15 20zM15 12c-1.7 0-3 1.3-3 3s1.3 3 3 3 3-1.3 3-3S16.7 12 15 12zM20 9A1 1 0 1 0 20 11 1 1 0 1 0 20 9z"></path>
+                    </svg></a>
+                <a href="https://twitter.com/Stray_Kids" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="38" height="38" viewBox="0 0 64 64">
+                    <linearGradient id="HOaxCdew_So_FZGl4pPQ6a_bG29Ckcdp6YP_gr1" x1="32" x2="32" y1="9" y2="55" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#HOaxCdew_So_FZGl4pPQ6a_bG29Ckcdp6YP_gr1)" d="M49,55H15c-3.309,0-6-2.691-6-6V15c0-3.309,2.691-6,6-6h34c3.309,0,6,2.691,6,6v34	C55,52.309,52.309,55,49,55z M15,11c-2.206,0-4,1.794-4,4v34c0,2.206,1.794,4,4,4h34c2.206,0,4-1.794,4-4V15c0-2.206-1.794-4-4-4H15	z"></path><linearGradient id="HOaxCdew_So_FZGl4pPQ6b_bG29Ckcdp6YP_gr2" x1="32" x2="32" y1="13" y2="51" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#6dc7ff"></stop><stop offset="1" stop-color="#e6abff"></stop></linearGradient><path fill="url(#HOaxCdew_So_FZGl4pPQ6b_bG29Ckcdp6YP_gr2)" d="M26.978,22l14.108,20h-3.063L23.914,22H26.978z M51,15v34c0,1.1-0.9,2-2,2H15	c-1.1,0-2-0.9-2-2V15c0-1.1,0.9-2,2-2h34C50.1,13,51,13.9,51,15z M44.914,44L34.789,29.613L43,20h-2.5l-6.841,8.009L28.022,20	h-7.937l9.222,13.103L20,44h2.5l7.937-9.292L36.978,44H44.914z"></path>
+                    </svg></a>
+                <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 40 40">
+                    <path fill="#98ccfd" d="M2.5 2.5H37.5V37.5H2.5z"></path><path fill="#4788c7" d="M37,3v34H3V3H37 M38,2H2v36h36V2L38,2z"></path><g><path fill="#fff" d="M26,37V24h4.93l0.698-5H26v-3.384c0-1.568,0.702-2.636,2.95-2.636L32,12.979V8.225 c-0.496-0.066-2.381-0.213-4.361-0.213c-4.134,0-6.639,2.523-6.639,7.157V19h-5v5h5v13H26z"></path></g>
+                    </svg></a>
+                <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 40 40">
+                    <path fill="#b0c1d4" d="M7.268,2.5h25.463c2.634,0,4.769,2.135,4.769,4.768v25.463c0,2.634-2.135,4.769-4.768,4.769H7.268 c-2.633,0-4.768-2.135-4.768-4.768V7.268C2.5,4.635,4.635,2.5,7.268,2.5z"></path><path fill="#66798f" d="M32.732,38H7.268C4.363,38,2,35.637,2,32.732V7.268C2,4.363,4.363,2,7.268,2h25.464 C35.637,2,38,4.363,38,7.268v25.464C38,35.637,35.637,38,32.732,38z M7.268,3C4.914,3,3,4.915,3,7.268v25.465 C3,35.085,4.914,37,7.268,37h25.465C35.086,37,37,35.085,37,32.731V7.268C37,4.915,35.085,3,32.731,3H7.268z"></path><path fill="#ffb5d2" d="M25,16.95c1.532,1.095,3.973,1.05,6,1.05v-3.9c-0.384,0-0.766-0.04-1.141-0.12v3.069 c-2.027,0-4.467,0.044-6-1.05v7.957c0,3.98-3.165,6.958-7.148,6.958c-1.486,0-2.867-0.449-4.014-1.219 c1.31,1.338,3.135,2.168,5.156,2.168c3.982,0,7.148-2.978,7.148-6.958V16.95L25,16.95z M26.472,12.768 c-0.783-0.855-1.297-1.96-1.409-3.182v-0.58h-1.082C24.253,10.637,25.183,11.964,26.472,12.768L26.472,12.768z M15.216,26.642 c-0.438-0.574-0.674-1.275-0.673-1.996c0-1.821,1.635-3.297,3.457-3.297c0.339,0,0.677,0.052,1,0.155v-4.36 c-0.378-0.052-0.759-0.074-1.141-0.066v3.476c-0.324-0.103-0.661-0.155-1.001-0.155c-1.822,0-3.457,1.476-3.457,3.297 C13.402,24.985,14.139,26.1,15.216,26.642z"></path><path fill="#fff" d="M23.859,16c1.532,1.095,3.973,1.05,6,1.05v-3.069c-1.132-0.241-2.633-0.393-3.387-1.214	c-1.289-0.804-2.218-2.214-2.49-3.767l-2.967-0.042v15.657c0.118,1.857-1.356,3.327-3.174,3.327c-1.071,0-2.023-0.51-2.626-1.301	c-1.076-0.542-1.814-1.658-1.814-2.945c0-1.821,1.635-3.297,3.457-3.297c0.349,0,0.685,0.054,1.001,0.155v-3.475	c-4.118,0-7.695,3.234-7.695,7.579c0,1.962,1.263,3.74,2.534,5.039c1.147,0.77,2.529,1.219,4.014,1.219	c3.982,0,7.148-2.978,7.148-6.958L23.859,16L23.859,16z"></path><path fill="#b5ddf5" d="M29.859,13.982v-0.83c-1.021,0.002-2.52,0.156-3.387-0.385 C27.238,13.606,28.747,13.745,29.859,13.982z M23.981,9c-0.026-0.149-0.046-0.214-0.059-0.364V8h-3.924v15.708 c-0.006,1.815-1.481,3.285-3.299,3.285c-0.534,0-1.037-0.126-1.484-0.352c0.603,0.79,1.555,1.301,2.626,1.301 c1.818,0,3.292-1.47,3.132-3.285V9H23.981z M17.859,17.079v-0.884c-0.328-0.045-0.658-0.067-0.99-0.067 c-3.983,0-7.848,3.205-7.848,7.581c0,2.496,1.748,4.695,3.676,5.988c-1.272-1.299-2.534-3.077-2.534-5.039 C10.162,20.229,13.946,17.159,17.859,17.079z"></path><path fill="#66798f" d="M23.922,8v0.636C23.936,8.786,23.955,8.851,23.981,9h0.001h1.081v0.586	c0.112,1.221,0.625,2.325,1.407,3.18c0.001,0,0.001,0.001,0.002,0.001c0.55,0.343,1.355,0.407,2.131,0.407	c0.446,0,0.883-0.021,1.256-0.022v0.829c0.375,0.08,0.757,0.12,1.141,0.12V18c-0.153,0-0.307,0-0.464,0	c-1.925,0-4.119-0.038-5.536-1.05v7.956c0,3.98-3.165,6.958-7.148,6.958c-2.016,0-3.839-0.827-5.148-2.161	c0.02,0.018,0.027,0.024,0.027,0.024c0,0-0.035-0.032-0.035-0.032c0.002,0.003,0.005,0.005,0.007,0.008	c-0.002-0.002-0.005-0.004-0.007-0.007c-1.928-1.293-3.676-3.492-3.676-5.988c0-4.334,3.865-7.581,7.848-7.581	c0.332,0,0.662,0.022,0.99,0.067v0.883c0.049-0.001,0.099-0.002,0.148-0.002c0.332,0,0.664,0.023,0.993,0.068v4.36	c-0.324-0.103-0.661-0.155-1-0.155c-1.822,0-3.457,1.476-3.457,3.297c-0.001,0.721,0.235,1.421,0.672,1.995c0,0,0,0,0.001,0	c0.446,0.226,0.95,0.352,1.484,0.352c1.818,0,3.293-1.47,3.299-3.327V8H23.922 M24.922,7h-1h-3.924l-0.98,0.02v8.328	c-0.046-0.006-1.024-0.144-1.024-0.144c-0.371-0.051-0.749-0.076-1.125-0.076c-4.273,0-8.848,3.448-8.848,8.581	c0,2.513,1.507,5.035,4.037,6.763c1.55,1.543,3.604,2.392,5.794,2.392c4.569,0,8.148-3.496,8.148-7.958V18.53	C27.494,19,29.194,19,30.514,18.979l1.464,0L32,18v-3.9v-1h-1c-0.047,0-0.094-0.001-0.141-0.002V12.15l-1.002,0.002	c-0.182,0-0.378,0.005-0.583,0.01c-0.216,0.005-0.442,0.011-0.671,0.011c-0.272,0-1.058,0-1.499-0.2	c-0.591-0.692-0.949-1.53-1.106-2.435V8h-0.935h-0.141V7L24.922,7z M15.88,25.843c-0.219-0.358-0.337-0.775-0.337-1.196	c0-1.225,1.148-2.298,2.457-2.298c0.239,0,0.473,0.036,0.697,0.107l0.301,0.096v1.114c-0.004,1.303-1.014,2.327-2.299,2.327	C16.414,25.993,16.139,25.943,15.88,25.843L15.88,25.843z"></path>
+                    </svg></a>
+                <a href="https://www.youtube.com/@StrayKids" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="40" height="40" viewBox="0 0 40 40">
+                    <path fill="#f78f8f" d="M37.625,28.838c-0.378,1.96-1.985,3.453-3.97,3.733c-3.119,0.467-7.817,0.928-13.677,0.928 c-5.765,0-10.558-0.533-13.772-1c-1.985-0.28-3.592-1.773-3.97-3.733c-0.378-2.147-0.732-4.82-0.732-8.74s0.397-6.718,0.775-8.865 c0.378-1.96,1.985-3.453,3.97-3.733c3.119-0.467,7.912-1.053,13.772-1.053S30.485,7.033,33.699,7.5 c1.985,0.28,3.592,1.773,3.97,3.733c0.378,2.147,0.832,4.945,0.832,8.865C38.405,24.018,38.003,26.692,37.625,28.838z"></path><path fill="#c74343" d="M20.003,7c5.815,0,10.841,0.553,14.037,1.017c1.575,0.222,2.832,1.401,3.124,2.917 C37.523,12.97,38,16.126,38,19.976c-0.106,4.38-0.569,7.576-0.833,9.075c-0.295,1.532-1.552,2.71-3.136,2.934 C31.991,32.29,26.538,33,20.003,33c-6.121,0-11.42-0.637-14.037-1.017c-1.575-0.222-2.832-1.401-3.124-2.917 C2.503,27.147,2.1,24.016,2.1,20s0.403-7.147,0.738-9.051c0.295-1.532,1.552-2.71,3.136-2.934C8.015,7.71,13.467,7,20.003,7 M20.003,6C14.143,6,8.945,6.56,5.826,7.027C3.841,7.307,2.234,8.8,1.856,10.76C1.478,12.907,1.1,16.08,1.1,20 s0.378,7.093,0.756,9.24c0.378,1.96,1.985,3.453,3.97,3.733C9.039,33.44,14.237,34,20.003,34c5.86,0,11.058-0.56,14.177-1.027 c1.985-0.28,3.592-1.773,3.97-3.733C38.527,27.093,38.905,23.92,39,20c0-3.92-0.473-7.093-0.851-9.24 c-0.378-1.96-1.985-3.453-3.97-3.733C30.966,6.56,25.863,6,20.003,6L20.003,6z"></path><polygon fill="#fff" points="16,26 16,14 27,20"></polygon>
+                    </svg></a>
+                </div>
+            </div>
+            </div>
+    </section>
+       
     <footer>
         <div class="mus">
         <img src="img/music.png" alt="">
         <div class="text">
         <h2>Stayville</h2>
-        <p>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</p>
+        <p>CREDITS</p>
+        <p>CONTACT US</p>
+        <p>PRIVACY POLICY</p>
+        <p>TERMS & CONDITIONS</p>
+        <h5 class="pp">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        </div>
+        </div>
+        <div class="container">
+        <div class="content">
+            <div class="mainc">
+            <div class="topic-text">Contact us</div>
+            <form action="#">
+                <div class="input-box">
+                <input type="text" placeholder="Your name" />
+                </div>
+                <div class="input-box">
+                <input type="text" placeholder="Your email" />
+                </div>
+                <div class="input-box message-box">
+                <textarea placeholder="Message"></textarea>
+                </div>
+                <div class="button">
+                <input type="button" value="send message" />
+                </div>
+            </form>
+            </div>
         </div>
         </div>
         <div class="social">
-            <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
-            <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
-            <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><img src="img/facebook.png" alt=""></a>
-            <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
-            <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
-        </div>
+                    <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
+                    <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><img src="img/facebook.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
+                    <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
+                </div>
     </footer>
 </body>
 </html>
