--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -166,16 +166,41 @@
         <img src="img/music.png" alt="">
         <div class="text">
         <h2>Stayville</h2>
-        <p>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</p>
+        <p>CREDITS</p>
+        <p>CONTACT US</p>
+        <p>PRIVACY POLICY</p>
+        <p>TERMS & CONDITIONS</p>
+        <h5 class="pp">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        </div>
+        </div>
+        <div class="container">
+        <div class="content">
+            <div class="mainc">
+            <div class="topic-text">Contact us</div>
+            <form action="#">
+                <div class="input-box">
+                <input type="text" placeholder="Your name" />
+                </div>
+                <div class="input-box">
+                <input type="text" placeholder="Your email" />
+                </div>
+                <div class="input-box message-box">
+                <textarea placeholder="Message"></textarea>
+                </div>
+                <div class="button">
+                <input type="button" value="send message" />
+                </div>
+            </form>
+            </div>
         </div>
         </div>
         <div class="social">
-            <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
-            <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
-            <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><img src="img/facebook.png" alt=""></a>
-            <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
-            <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
-        </div>
+                    <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
+                    <a href="https://www.facebook.com/JYPEStrayKids/" target="_blank"><img src="img/facebook.png" alt=""></a>
+                    <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
+                    <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
+                </div>
     </footer>
 </body>
 </html>
