--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -26,6 +26,9 @@
     <section class="stay"> 
          <img src="img/Stray-Kids-Logo.png" alt="">
          <div class="circle3"></div>
+         <div class="circle4"></div>
+            <div class="circle5"></div>
+            <div class="circle6"></div>
     </section> 
     <div class="tt"></div>
     <section class="straykids">
@@ -98,7 +101,221 @@
             </div>
             </div>
     </section>
-       
+    <section class="member">
+        <div class="main">
+        <h1>Members</h1>
+        <p>*Note: JYP officially got rid of SKZ Positions on their. They are all all-rounders and not<br> necessarily bound to one position.</p>    
+        </div>
+        <div class="mem">
+        <div class="bang">
+            <div class="image">
+                <img src="img/bangchan.png" alt="">
+                <div class="item">
+                 <h3>Funfacts</h3>
+                <p>Trained for 7 years; friends with a lot of idols; he also likes to DJ; “if Stay are happy then Channie is happy too”</p>   
+                </div>
+            </div>
+            <div class="text">
+                <h1>Bang Chan</h1>
+                <p>Name</p>
+                <h3>Bahng Cristofer Chahn</h3>
+                <p>Birthday</p>
+                <h3>03/10/1997 (Libra)</h3>
+                <p>Nationality</p>
+                <h3>Australian (Sydney)</h3>
+                <p>Nicknames</p>
+                <h3>Chris, Sunny Boy</h3>
+                <p>Main position</p> 
+                <h3>Leader</h3>
+                <p>Emoji</p>
+                <h3>Wolf</h3>   
+            </div>
+        </div>
+        <div class="changbin">
+            <div class="image">
+                <img src="img/changbin.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>Was part of a dance team in high school, now one of the main rappers; always working out; actually the one with the most aegyo; went on KOMS and SMTM within one year</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Changbin</h1>
+                <p>Name</p>
+                <h3>Seo Changbin</h3>
+                <p>Birthday</p>
+                <h3>11/08/1999 (Leo)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Yongin)</h3>
+                <p>Nicknames</p>
+                <h3>Dwaekki (Pigunny, Pig & Bunny), Binnie</h3>
+                <p>Emoji</p>
+                <h3>Pig & Bunny</h3>   
+            </div>
+        </div>
+        <div class="leeknow">
+            <div class="image">
+                <img src="img/leeknow.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>Has 3 cats, and absolutely adores cats; ambidextrous; shortest trainee period; likes boxing</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Lee Know</h1>
+                <p>Name</p>
+                <h3>Lee Minho</h3>
+                <p>Birthday</p>
+                <h3>25/10/1998 (Scorpio)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Gimpo)</h3>
+                <p>Nicknames</p>
+                <h3>Lino, Linoring</h3>
+                <p>Emoji</p>
+                <h3>Cat/Bunny</h3>   
+            </div>
+        </div>
+        <div class="han">
+            <div class="image">
+                <img src="img/han.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>Likes ghibli movies, watches nature documentaries on youtube, lived in Malaysia for several years, loves cheesecake</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Han</h1>
+                <p>Name</p>
+                <h3>Han Lisung</h3>
+                <p>Birthday</p>
+                <h3>14/09/2000 (Virgo)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Incheon)</h3>
+                <p>Nicknames</p>
+                <h3>Hannie, Quokka, Squirrel</h3>
+                <p>Emoji</p>
+                <h3>Squirrel</h3>   
+            </div>
+        </div>
+        <div class="felix">
+            <div class="image">
+                <img src="img/felix.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>Loves baking; very cuddly; likes video games; freckles</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Felix</h1>
+                <p>Name</p>
+                <h3>Lee Yongbok / Felix Lee</h3>
+                <p>Birthday</p>
+                <h3>15/09/2000 (Virgo)</h3>
+                <p>Nationality</p>
+                <h3>Australian (Sydney)</h3>
+                <p>Nicknames</p>
+                <h3>Bokkie, Haengbokie, Lix, Lixie, Fairy, Elf, Sunshine</h3>
+                <p>Emoji</p>
+                <h3>Chick</h3>   
+            </div>
+        </div>
+        <div class="seung">
+            <div class="image">
+                <img src="img/seungmin.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>His english name is Sky; most diligent (according to others); biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Seungmin</h1>
+                <p>Name</p>
+                <h3>Kim Seungmin</h3>
+                <p>Birthday</p>
+                <h3>22/09/2000 (Virgo)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Seoul)</h3>
+                <p>Nicknames</p>
+                <h3>Seungmo, Puppy, Dandy Boy</h3>
+                <p>Emoji</p>
+                <h3>Puppy</h3>   
+            </div>
+        </div>
+        <div class="hyun">
+            <div class="image">
+                <img src="img/hyunjin.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>He’s been an MC for Music Core for two years now, hates eggplants, is learning producing currently, loves among us</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>Hyunjin</h1>
+                <p>Name</p>
+                <h3>Hwang Hyunjin</h3>
+                <p>Birthday</p>
+                <h3>20/03/2000 (Pisces)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Seoul)</h3>
+                <p>Nicknames</p>
+                <h3>Jinnie, Hyun.e, Llama</h3>
+                <p>Emoji</p>
+                <h3>Dumpling</h3>   
+            </div>
+        </div>
+        <div class="in">
+            <div class="image">
+                <img src="img/in.png" alt="">
+                <div class="item">
+                    <h3>Funfacts</h3>
+                   <p>Loves trot; works out a lot actually; truly the definition of Maknae on Top, always smiling</p>   
+                   </div>
+            </div>
+            <div class="text">
+                <h1>I.N</h1>
+                <p>Name</p>
+                <h3>Yang Jeongin</h3>
+                <p>Birthday</p>
+                <h3>08/02/2001 (Aquarius)</h3>
+                <p>Nationality</p>
+                <h3>Korean (Busan)</h3>
+                <p>Nicknames</p>
+                <h3>Baby Bread, Innie, Desert Fox, Anything+Bread</h3>
+                <p>Main position</p>
+                <h3>Maknae</h3>
+                <p>Emoji</p>
+                <h3>Fox</h3>   
+            </div>
+        </div>
+    </div>                 
+    </section>
+    <section class="pets">
+        <h1>Pets</h1>
+        <div class="main">
+            <div class="pet1">
+                <div class="image">
+                 <img src="img/berry.png" alt="">   
+                </div>
+            </div>
+            <div class="pet2">
+                <div class="image">
+                    <img src="img/soonie.png" alt="">
+                    <img src="img/doongie.png" alt="">
+                    <img src="img/dori.png" alt="">
+                </div>
+            </div>
+            <div class="pet3">
+                <div class="image">
+                    <img src="img/bbama.png" alt="">
+                </div>
+            </div>
+            <div class="pet4">
+                <div class="image">
+                    <img src="img/kkami.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="mus">
         <img src="img/music.png" alt="">
@@ -108,7 +325,7 @@
         <p>CONTACT US</p>
         <p>PRIVACY POLICY</p>
         <p>TERMS & CONDITIONS</p>
-        <h5 class="pp">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        <h5>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
         </div>
         </div>
         <div class="container">
