--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -19,7 +19,7 @@
                 <li><a href="#">group</a></li>
                 <li><a href="#">discography</a></li>
                 <li><a href="#">news</a></li>
-                <li><a href="#">log in</a></li>
+                <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
     </header>
@@ -224,7 +224,7 @@
                 <img src="img/seungmin.png" alt="">
                 <div class="item">
                     <h3>Funfacts</h3>
-                   <p>His english name is Sky; most diligent (according to others); biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>   
+                   <p>His english name is Sky; most diligent; biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>   
                    </div>
             </div>
             <div class="text">
@@ -294,24 +294,42 @@
         <div class="main">
             <div class="pet1">
                 <div class="image">
-                 <img src="img/berry.png" alt="">   
+                 <img src="img/berry.png" alt=""> 
+                 <div class="text">
+                    <h3>Berry</h3>
+                    <p>Chan’s dog back in Australia <br>birthday is December 2nd 2015</p>
+                 </div>  
                 </div>
             </div>
             <div class="pet2">
                 <div class="image">
-                    <img src="img/soonie.png" alt="">
+                    <div class="img1">
+                     <img src="img/soonie.png" alt="">
                     <img src="img/doongie.png" alt="">
-                    <img src="img/dori.png" alt="">
+                    <img src="img/dori.png" alt="">   
+                    </div>
+                    <div class="text">
+                        <h3>Soonie, Doongie, Dori</h3>
+                        <p>Minho’s cats <br> all adopted and all spoiled by him</p>
+                     </div>
                 </div>
             </div>
             <div class="pet3">
                 <div class="image">
                     <img src="img/bbama.png" alt="">
+                    <div class="text">
+                        <h3>Bbama</h3>
+                        <p>Han’s dog <br> Baby full of energy and love</p>
+                     </div>
                 </div>
             </div>
             <div class="pet4">
                 <div class="image">
                     <img src="img/kkami.png" alt="">
+                    <div class="text">
+                        <h3>Kkami</h3>
+                        <p>Hyunjin’s dog <br> Small and scared of other dogs</p>
+                     </div>
                 </div>
             </div>
         </div>
