--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -20,7 +20,7 @@
                 <li><a href="group.html">group</a></li>
                 <li><a href="#">discography</a></li>
                 <li><a href="#">news</a></li>
-                <li><a href="#">log in</a></li>
+                <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
     </header>
@@ -42,7 +42,7 @@
             <h2>You make Stray kids Stay</h2> 
             <h1>STRAY KIDS EVERYWHERE <br> ALL AROUND THE WORLD</h1>
             <div class="text">
-                <div class="welcome">Welcome to the Stayville website. This is a virtual journey into the world of music, which begins with Stray Kids.<button>about group</button></div>
+                <div class="welcome">Welcome to the Stayville website. This is a virtual journey into the world of music, which begins with Stray Kids. <a href="group.html"><button>about group</button></a> </div>
                 <div class="description">Stray Kids is not just music, it's movement, philosophy and art. They gave us several hundred songs, but also caused endless emotions and hopes. They are a bridge between music and life. Join our journey and I assure you it will leave a mark in your hearts and give you faith in your abilities.</div>
             </div>
             </div>
@@ -111,7 +111,8 @@
                 <p>South Korean boy band Stray Kids' <br> list of awards and nominations <br> includes 62 awards and 127 <br> nominations, as well as 25 music <br> show wins.</p>
                 
             </div>
-            <button class="but">read more</button>
+            <a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_Stray_Kids" target="_blank">
+            <button class="but">read more</button></a>
         </section>
         <section  class="news">
             <h1>What's new?</h1>
