--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="group.html">group</a></li>
-                <li><a href="#">discography</a></li>
+                <li><a href="discography.html">discography</a></li>
                 <li><a href="#">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
@@ -57,7 +57,7 @@
             <div class="popular">
                 <h1>Popular <br> music</h1> 
              <hr>
-                <div><button>discography</button></div>
+                <div><a href="discography.html"><button>discography</button></a></div>
             </div>
             <div class="img1">
                 <img src="img/21.jpg" alt="">
