--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -17,18 +17,18 @@
             <ul>
                 <li><a href="project.html">home</a></li>
                 <li><a href="#">group</a></li>
-                <li><a href="#">discography</a></li>
+                <li><a href="discography.html">discography</a></li>
                 <li><a href="#">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
     </header>
     <section class="stay"> 
-         <img src="img/Stray-Kids-Logo.png" alt="">
-         <div class="circle3"></div>
-         <div class="circle4"></div>
-            <div class="circle5"></div>
-            <div class="circle6"></div>
+        <img src="img/Stray-Kids-Logo.png" alt="">
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+        <div class="circle5"></div>
+        <div class="circle6"></div>
     </section> 
     <div class="tt"></div>
     <section class="straykids">
