--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -18,7 +18,7 @@
                 <li><a href="project.html">home</a></li>
                 <li><a href="#">group</a></li>
                 <li><a href="discography.html">discography</a></li>
-                <li><a href="#">news</a></li>
+                <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
