--- a/ppw project/login.html
+++ b/ppw project/login.html
@@ -39,7 +39,7 @@
                 <input type="password" placeholder="Password" required>
                 <div class="link">
                   <button type="submit" class="log">Login</button>
-                  <a href="#" class="forgot">Forgot password?</a>
+                  <a href="https://staydepartment.com/register/" class="forgot" target="_blank">Dont have an account? <strong>Register</strong></a>
                 </div>
              
               </form>
