--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -19,7 +19,7 @@
                 <li><a href="#">home</a></li>
                 <li><a href="group.html">group</a></li>
                 <li><a href="discography.html">discography</a></li>
-                <li><a href="#">news</a></li>
+                <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
@@ -28,14 +28,16 @@
         <div class="circle"> </div>
         <div class="circle2"></div>
         <section class="intro">
-            <img src="img/image.jpg" alt="">
+            <div class="item">
             <div class="text">
+                <div class="text1">
             <h2>Stayville</h2>
             <p>As long as I stay with</p> 
-            <p> my heart</p> 
+            <p> my heart</p> </div>
             <a href="https://open.spotify.com/artist/2dIgFjalVxs4ThymZ67YCE" target="_blank">
             <button> music </button></a>
             </div>
+        </div>
         </section> 
         <section class="who">
             <div class="container">
