--- a/ppw project/discography.html
+++ b/ppw project/discography.html
@@ -18,7 +18,7 @@
                 <li><a href="project.html">home</a></li>
                 <li><a href="group.html">group</a></li>
                 <li><a href="#">discography</a></li>
-                <li><a href="#">news</a></li>
+                <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
         </nav>
@@ -35,7 +35,6 @@
         <div class="circle9"></div>
         <div class="circle10"></div>
         <div class="circle11"></div>
-        <div class="circle12"></div>
     </section> 
     <div class="tt"></div>
     <div class="about">
