--- a/ppw project/group.html
+++ b/ppw project/group.html
@@ -12,16 +12,17 @@
 </head>
 <body>
     <header>
+        <div class="content">
         <h1>Stayville</h1>
         <nav>
             <ul>
-                <li><a href="project.html">home</a></li>
-                <li><a href="#">group</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="group.html">group</a></li>
                 <li><a href="discography.html">discography</a></li>
                 <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
-        </nav>
+        </nav></div>
     </header>
     <section class="stay"> 
         <img src="img/Stray-Kids-Logo.png" alt="">
@@ -290,7 +291,8 @@
         <div class="main">
             <div class="pet1">
                 <div class="image">
-                 <img src="img/berry.png" alt=""> 
+                    <div>
+                 <img src="img/berry.png" alt=""> </div>
                  <div class="text">
                     <h3>Berry</h3>
                     <p>Chan’s dog back in Australia <br>birthday is December 2nd 2015</p>
@@ -312,7 +314,8 @@
             </div>
             <div class="pet3">
                 <div class="image">
-                    <img src="img/bbama.png" alt="">
+                    <div>
+                    <img src="img/bbama.png" alt=""></div>
                     <div class="text">
                         <h3>Bbama</h3>
                         <p>Han’s dog <br> Baby full of energy and love</p>
@@ -321,7 +324,8 @@
             </div>
             <div class="pet4">
                 <div class="image">
-                    <img src="img/kkami.png" alt="">
+                    <div>
+                    <img src="img/kkami.png" alt=""></div>
                     <div class="text">
                         <h3>Kkami</h3>
                         <p>Hyunjin’s dog <br> Small and scared of other dogs</p>
@@ -339,7 +343,7 @@
         <p>CONTACT US</p>
         <p>PRIVACY POLICY</p>
         <p>TERMS & CONDITIONS</p>
-        <h5>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        <h5 class="pp">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
         </div>
         </div>
         <div class="container">
@@ -362,7 +366,6 @@
             </form>
             </div>
         </div>
-        </div>
         <div class="social">
                     <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
                     <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
@@ -370,6 +373,8 @@
                     <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
                     <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
                 </div>
+        </div>
+        
     </footer>
 </body>
 </html>
