--- a/ppw project/login.html
+++ b/ppw project/login.html
@@ -19,6 +19,7 @@
                 <h1><a href="project.html">Stayville</a></h1>
                 <p>As long as I stay with my heart</p>
               </div>
+              <div class="log">
               <form action="#">
                 <div class="image">
                     <img class="img1" src="img/wolfchan.png" alt="">
@@ -41,7 +42,7 @@
                   <button type="submit" class="log">Login</button>
                   <a href="https://staydepartment.com/register/" class="forgot" target="_blank">Dont have an account? <strong>Register</strong></a>
                 </div>
-             
+             </div>
               </form>
             </div>
           </div>
