--- a/ppw project/project.html
+++ b/ppw project/project.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Stayville</title>
     <link rel="icon" type="image/png" href="img/music.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@400;600&family=Inria+Serif:ital,wght@0,400;1,300&family=Irish+Grover&display=swap" rel="stylesheet">
-
+   
     <link rel="stylesheet" href="project.css">
 </head>
 <body>
@@ -118,8 +118,8 @@
         <section class="award">
             <h1>Awards</h1>
             <div class="text">
-                <h3>Awards and <br> nominations <br>received by Stray <br> Kids</h3>
-                <p>South Korean boy band Stray Kids' <br> list of awards and nominations <br> includes 62 awards and 127 <br> nominations, as well as 25 music <br> show wins.<a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_Stray_Kids" target="_blank">
+                <h3>Awards and  nominations received by Stray Kids</h3>
+                <p>South Korean boy band Stray Kids' list of awards and nominations includes 62 awards and 127 <br> nominations, as well as 25 music <br> show wins.<a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_Stray_Kids" target="_blank">
             <button class="but">read more</button></a></p>
                 
             </div>
@@ -206,7 +206,6 @@
             </form>
             </div>
         </div>
-        </div>
         <div class="social">
                     <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
                     <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
@@ -214,6 +213,8 @@
                     <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
                     <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
                 </div>
+        </div>
+        
     </footer>
 </body>
 </html>
