--- a/ppw project/discography.html
+++ b/ppw project/discography.html
@@ -12,16 +12,17 @@
 </head>
 <body>
     <header>
+        <div class="content">
         <h1>Stayville</h1>
         <nav>
             <ul>
-                <li><a href="project.html">home</a></li>
+                <li><a href="#">home</a></li>
                 <li><a href="group.html">group</a></li>
-                <li><a href="#">discography</a></li>
+                <li><a href="discography.html">discography</a></li>
                 <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
-        </nav>
+        </nav></div>
     </header>
     <section class="stay"> 
         <img src="img/Stray-Kids-Logo.png" alt="">
@@ -525,7 +526,7 @@
         <p>CONTACT US</p>
         <p>PRIVACY POLICY</p>
         <p>TERMS & CONDITIONS</p>
-        <h5>STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
+        <h5 class="pp">STRAY KIDS EVERYWHERE ALL AROUND THE WORLD</h5>
         </div>
         </div>
         <div class="container">
@@ -548,7 +549,6 @@
             </form>
             </div>
         </div>
-        </div>
         <div class="social">
                     <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
                     <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
@@ -556,6 +556,8 @@
                     <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
                     <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
                 </div>
+        </div>
+        
     </footer>
 </body>
 </html>
