--- a/ppw project/news.html
+++ b/ppw project/news.html
@@ -13,16 +13,17 @@
 </head>
 <body>
     <header>
+        <div class="content">
         <h1>Stayville</h1>
         <nav>
             <ul>
-                <li><a href="project.html">home</a></li>
+                <li><a href="#">home</a></li>
                 <li><a href="group.html">group</a></li>
                 <li><a href="discography.html">discography</a></li>
-                <li><a href="#">news</a></li>
+                <li><a href="news.html">news</a></li>
                 <li><a href="login.html">log in</a></li>
             </ul>
-        </nav>
+        </nav></div>
     </header>
     <section class="stay"> 
         <div class="ss">
@@ -50,7 +51,7 @@
         <div class="new2 web">
             <div class="image">
                 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/dBDkYofMUs4?si=UIH1u3FYX_jRf3Pz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rwiskJjUjig?si=TyNeh36nSssjZoRP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="text">
                 <h1>Stray Kids "(樂)(LALALALA)" M/V</h1>
@@ -158,7 +159,6 @@
             </form>
             </div>
         </div>
-        </div>
         <div class="social">
                     <a href="https://www.instagram.com/realstraykids/" target="_blank"><img src="img/instagram.png" alt=""></a>
                     <a href="https://twitter.com/Stray_Kids" target="_blank"><img src="img/twitter.png" alt=""></a>
@@ -166,6 +166,8 @@
                     <a href="https://www.tiktok.com/@jypestraykids?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tiktok.png" alt=""></a>
                     <a href="https://www.youtube.com/@StrayKids" target="_blank"><img src="img/youtube.png" alt=""></a>
                 </div>
+        </div>
+        
     </footer>
 </body>
 </html>
